ui: fix progress bar position on mobile

--- a/packages/ui-default/components/nprogress.page.styl
+++ b/packages/ui-default/components/nprogress.page.styl
@@ -12,6 +12,8 @@ $spinner-margin = ($nav-item-height - $spinner-size) / 2
   left: 0
   width: 100%
   height: 2px
+  +mobile()
+    margin-top: rem(10px)
 
 #nprogress .peg
   display: none
